--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
+name: Test Runner Local
+
+on:
+  workflow_dispatch:   # Cho phép chạy thủ công từ GitHub UI
+  push:                # Hoặc chạy mỗi khi push code vào repo
+
 jobs:
-  build:
-    runs-on: self-hosted
+  test:
+    runs-on: self-hosted   # BẮT BUỘC: để job chạy trên local runner
     steps:
-      - uses: actions/checkout@v3
-      - run: echo "Chạy CI/CD trên máy local Ubuntu!"
+      - name: Say Hello
+        run: echo "Hello World from Local Runner!"
