--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "dev": "node index.js",
+    "build": "tsc -p . || echo 'no build step'", 
+    "test": "npm test --silent",
+    "lint": "eslint . --ext .js,.ts"
   },
   "keywords": [],
   "author": "",
